cmake_minimum_required(VERSION 3.4)
project (Tuple)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER clang++)
#set(CMAKE_CXX_COMPILER g++-6)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0 -g -fsanitize=address")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(TestTuple test/TupleTest.cpp src/Tuple.hpp)
target_link_libraries(TestTuple gtest)
if(UNIX)
	target_link_libraries(TestTuple pthread)
endif()
